--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
+    "json-server": "^1.0.0-alpha.23",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
